[gd_scene load_steps=25 format=2]

[ext_resource path="res://Assets/Acme-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Button Design.PNG" type="Texture" id=2]
[ext_resource path="res://Road_Work_Ahead/RWA.PNG" type="Texture" id=3]
[ext_resource path="res://Road_Work_Ahead/RWAControl.gd" type="Script" id=4]
[ext_resource path="res://Road_Work_Ahead/RWADialogue.gd" type="Script" id=5]
[ext_resource path="res://Classroom.PNG" type="Texture" id=6]

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 2732, 2048 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 2732, 2048 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 2732, 2048 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 2732, 2048 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 2732, 2048 )

[sub_resource type="DynamicFont" id=8]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 2732, 2048 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 2732, 2048 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 2732, 2048 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 2732, 2048 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 2732, 2048 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 2732, 2048 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 2732, 2048 )

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 2732, 2048 )

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 2732, 2048 )

[sub_resource type="StyleBoxTexture" id=18]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 2732, 2048 )

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[node name="Road_Work_Ahead" type="Node2D"]

[node name="2" type="Position2D" parent="."]
position = Vector2( 504, 312 )

[node name="RWADialogue" type="Node2D" parent="."]
position = Vector2( 496, 304 )
script = ExtResource( 5 )

[node name="Classroom" type="Sprite" parent="."]
position = Vector2( 508, 296 )
scale = Vector2( 0.255952, 0.201058 )
texture = ExtResource( 6 )

[node name="RWAControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Button1" type="Button" parent="RWAControl"]
margin_left = 24.0
margin_top = 192.0
margin_right = 376.0
margin_bottom = 384.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Choice 1"

[node name="Button2" type="Button" parent="RWAControl"]
margin_left = 328.0
margin_right = 712.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "Choice 2"

[node name="Button3" type="Button" parent="RWAControl"]
margin_left = 664.0
margin_top = 192.0
margin_right = 1024.0
margin_bottom = 384.0
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/focus = SubResource( 16 )
custom_styles/disabled = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
text = "Choice 3"

[node name="Rwa" type="Sprite" parent="RWAControl"]
position = Vector2( 500.25, 288 )
scale = Vector2( 0.12085, 0.0925146 )
texture = ExtResource( 3 )

[node name="TextBox" type="ColorRect" parent="RWAControl"]
margin_left = 56.0
margin_top = 416.0
margin_right = 952.0
margin_bottom = 560.0
color = Color( 1, 1, 1, 0.690196 )

[node name="RichTextLabel" type="RichTextLabel" parent="RWAControl/TextBox"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 16.0
margin_top = 24.0
margin_right = 880.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 136, 48 )

[node name="Tween" type="Tween" parent="RWAControl/TextBox"]

[node name="Label" type="Label" parent="RWAControl/TextBox"]
margin_left = 8.0
margin_top = -40.0
margin_right = 112.0
margin_bottom = -1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Name"

[connection signal="pressed" from="RWAControl/Button1" to="RWAControl" method="_on_Button1_pressed"]
[connection signal="pressed" from="RWAControl/Button2" to="RWAControl" method="_on_Button2_pressed"]
[connection signal="pressed" from="RWAControl/Button3" to="RWAControl" method="_on_Button3_pressed"]
[connection signal="tween_completed" from="RWAControl/TextBox/Tween" to="RWAControl" method="_on_Tween_tween_completed"]
